# particle_collector

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: push.yml
data/: test.csv
file_operations/: Cargo.toml
file_operations/data/: test.csv
file_operations/src/: lib.rs
file_reader/: Cargo.toml
file_reader/src/: lib.rs
models/: Cargo.toml
models/migrations/2023-06-28-142516_particles/: down.sql  up.sql
models/src/: lib.rs  schema.rs
particle_collector_api/: Cargo.toml
particle_collector_api/src/: main.rs  particles.rs
particle_collector_ui/: Cargo.toml
particle_collector_ui/src/: control.rs  main.rs  message.rs  particles.rs
