[package]
name = "file_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
models = {path = "../models"}
chrono = "0.4.26"

[dev-dependencies]
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
