[package]
name = "particle_collector_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "particles"
path = "src/particles.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.28.2", features = ["full"] }
models = { path = "../models" }
serde_json = "1.0.99"
uuid = { version = "1.4.0", features = ["v4"] }
