[package]
name = "particle_collector_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.9.0", features = ["debug", "tokio"] }
rust_decimal = "1.30.0"
models = { path = "../models" }
reqwest = { version = "0.11.18" }
serde_json = "1.0.99"
chrono = "0.4.26"
