[package]
name = "particle_collector_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.9.0", features = ["debug", "tokio"] }
models = {path = "../models"}
serde_json = "1.0.99"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
